# clion-bazel

./: .gitignore  README.md
src/: .bazelproject  CMakeLists.txt  MODULE.bazel
src/foo/: BUILD  CMakeLists.txt  foo.cpp
src/tests/foo/: BUILD  CMakeLists.txt  test_foo.cpp
